--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     },
     "autoload": {
         "files": [
-        "app/Helpers/Common.php"
+        "app/Helpers/Common.php",
+        "app/Helpers/helpers.php"
     ],
         "psr-4": {
             "App\\": "app/",
